# cpp-opensolid-core

./: .gitignore  .hgignore  CMakeLists.txt  Core.hpp  CreateSourceGroups.cmake  OpenSolid.sublime-project  Python.hpp  README.md  Template.cpp  Template.hpp  checker.py  license.txt  macros.cmake
Bindings/: CMakeLists.txt  HelloOpenSolid.cs  Interval.hpp  Interval.i  JInterval.hpp  OpenSolid.i  OpenSolidDotNet.i  OpenSolidExtensions.cs  Zero.i  opensolid.i
Core/: CMakeLists.txt  Template.cpp  Template.hpp  config.hpp  opensolid.proto
Core/Common/: Bounds.hpp  BoundsTests.hpp  Conversion.cpp  Conversion.hpp  Convertible.hpp  Deserialization.cpp  Deserialization.hpp  Dictionary.cpp  Dictionary.hpp  Error.cpp  Error.hpp  Evaluation.hpp  Hash.hpp  Key.hpp  List.cpp  MatrixArgument.hpp  Message.cpp  Message.hpp  PropertyMap.cpp  PropertyMap.hpp  Serialization.cpp  Serialization.hpp  SerializedDouble.proto  SerializedInt.proto  Transformable.hpp  TypeName.cpp  TypeName.hpp  TypeSchema.hpp  Value.cpp  Value.hpp  Value.proto
Core/Datum/: Axis.cpp  Axis.hpp  Datum.cpp  Datum.hpp  Datum.proto  DatumTests.hpp  Frame.cpp  Frame.hpp  Plane.cpp  Plane.hpp  SerializedDatum.proto
Core/Domain/: Domain.cpp  Domain.hpp  DomainConstructors.cpp  DomainConstructors.hpp  SerializedDomain.proto
Core/File/: File.cpp  File.hpp  FileTests.hpp
Core/Function/: Function.cpp  Function.hpp  FunctionConstructors.cpp  FunctionConstructors.hpp  FunctionResult.hpp  FunctionTests.hpp  SerializedFunction.proto
Core/Generic/: Bounds.hpp  Conversion.hpp  ReferenceCounted.hpp  Transformable.hpp  Typename.cpp  Typename.hpp
Core/Geometry/: Geometry.cpp  Geometry.hpp  GeometryConstructors.cpp  GeometryConstructors.hpp  GeometryResult.hpp  GeometryTests.hpp  SerializedGeometry.proto
Core/Matrix/: DenseBasePlugin.hpp  Matrix.cpp  Matrix.hpp  MatrixBasePlugin.hpp  MatrixIterator.hpp  MatrixPlugin.hpp  MatrixTests.hpp  SerializedMatrix.proto
Core/Mesh/: Mesh.hpp
Core/Object/: Object.cpp  Object.hpp  ObjectTests.hpp  SerializedObject.proto
Core/Scalar/: Comparison.hpp  Interval.cpp  Interval.hpp  IntervalTests.hpp  SerializedInterval.proto  double.hpp  int.hpp
Core/Set/: Set.hpp  SetNode.hpp  SetTests.hpp
Core/Simplex/: SerializedSimplex.proto  Simplex.cpp  Simplex.hpp  SimplexTests.hpp
Core/Support/: Boost.hpp  STL.hpp
Documentation/: CMakeLists.txt  Doxyfile.in  footer.html  goals.dox  mainpage.dox
Graph/: CMakeLists.txt  graphParamList.cpp  graphScript.cpp  graphScript.h  paramNode.cpp  paramNode.h  pointNode.h  project.h
Graph/stk/: CMakeLists.txt  graphAction.cpp  property.cpp  ptrList.h  safePtr.h
Graph/tests/: CMakeLists.txt  nodeTests.cpp
OpenSolid/: CMakeLists.txt  Template.cpp  Template.hpp  TemplateTests.hpp  bindTemplate.cpp  checker.py  config.hpp  declarations.hpp  opensolid.proto
OpenSolid.Python/: CMakeLists.txt  bindError.cpp  bindInterval.cpp  bindSpecificMatrixSizes.cpp  bindTolerance.cpp  check.cpp  check.hpp
OpenSolid/Collection/: CollectionBase.hpp  CollectionConcatenation.hpp  CollectionMap.hpp  FixedSizeCollection.hpp  FixedSizeCollectionConcatenation.hpp  FixedSizeCollectionMap.hpp  IteratorRange.hpp  List.hpp  List.tests.hpp  ListMatrixAdapter.hpp  Set.hpp  Set.tests.hpp  SetNode.hpp  VisitorMap.hpp
OpenSolid/Common/: Bisected.hpp  Bounds.hpp  Bounds.tests.hpp  BoundsTests.hpp  Comparison.hpp  Convertible.hpp  Eigen.hpp  Error.cpp  Error.hpp  Evaluation.hpp  Hash.hpp  HashFunction.hpp  MatrixArgument.hpp  Pair.hpp  ReferenceCounted.hpp  ReferenceCountedBase.hpp  Repr.hpp  Serialization.hpp  Shared.hpp  Traits.hpp  Transformable.hpp  check.cpp  check.hpp  config.hpp
OpenSolid/Core/: Axis.cpp  Axis.declarations.hpp  Axis.definitions.hpp  Axis.hpp  AxisPlaneIntersection3d.cpp  AxisPlaneIntersection3d.definitions.hpp  AxisPlaneIntersection3d.hpp  AxisTriangleIntersection3d.cpp  AxisTriangleIntersection3d.definitions.hpp  AxisTriangleIntersection3d.hpp  Body.cpp  Body.declarations.hpp  Body.definitions.hpp  Body.hpp  BoundedArea.cpp  BoundedArea.declarations.hpp  BoundedArea.definitions.hpp  BoundedArea.hpp  Bounds.hpp  (+249 more)
OpenSolidPython/: CMakeLists.txt  bindAll.cpp  bindEigen.cpp  bindError.cpp  bindFunction.cpp  bindInterval.cpp  bindSpecificMatrixSizes.cpp  bindTolerance.cpp  check.cpp  check.hpp
OpenSolidScripting/: CMakeLists.txt  Script.cpp  Script.hpp  Script.tests.hpp
Python/: CMakeLists.txt  PythonEnvironment.cpp  PythonEnvironment.hpp  PythonModule.cpp  PythonModule.hpp  PythonTests.hpp  bindBounds.cpp  bindComparison.cpp  bindDatum.cpp  bindDouble.cpp  bindError.cpp  bindFile.cpp  bindFunction.cpp  bindInterval.cpp  bindMatrix.cpp  bindMatrixConstructors.cpp  bindObject.cpp  bindSerialization.cpp  bindSet.cpp  bindSimplex.cpp  bindTemplate.cpp  config.hpp  repr.hpp
Sandbox/: CMakeLists.txt  sandbox-set-performance.cpp  sandbox-spatialset-performance.cpp  sandbox-syntax-examples.cpp
Tests/: CMakeLists.txt  CSharpTests.cs  CircleTests.cpp  CollectionTests.cpp  CollectionTests.hpp  CoordinateSystemTests.cpp  CoordinateSystemTests.hpp  CurveTests.cpp  CurveTests.hpp  DatumTests.cpp  DatumTests.hpp  FileTests.hpp  FunctionTests.hpp  GeometryTests.hpp  IntervalTests.cpp  IntervalTests.hpp  IterableTests.hpp  JavaTests.java  ListTests.hpp  MatrixTests.cpp  MatrixTests.hpp  ObjectTests.hpp  ParametricExpressionTests.cpp  ParametricExpressionTests.hpp  PositionTests.cpp  PositionTests.hpp  PythonTests.hpp  QuaternionTests.cpp  ScriptingTests.cpp  SetTests.cpp  SetTests.hpp  SimplexTests.cpp  SimplexTests.hpp  SphereTests.cpp  Template.cpp  Template.hpp  VectorTests.cpp  VectorTests.hpp  checker.py  evalTests.cpp  (+1 more)
core/: CMakeLists.txt
documentation/: CMakeLists.txt  Doxyfile.in
graph/: CMakeLists.txt
opensolid/: CMakeLists.txt  Core.hpp  TemplateTests.hpp  checker.py  core.hpp  python.hpp
opensolid_scripting/: CMakeLists.txt  Script.hpp
tests/: CMakeLists.txt  DatumTests.hpp  FunctionTests.hpp  GeometryTests.hpp  IntervalTests.hpp  MatrixTests.hpp  PythonTests.hpp  SetTests.hpp  SimplexTests.hpp  Template.hpp  evalTests.cpp  nodeTests.cpp
(+2073 files in other folders)
